--- a/Clase04/01-Ejercicio01/views/add-form.jade
+++ b/Clase04/01-Ejercicio01/views/add-form.jade
@@ -3,11 +3,11 @@ html
 		meta(charset="utf8")
 	body
 		h1 #{titulo}
-		form(method="post", action="/")
+		form(method="POST", action="/")
 			fieldset
 				div
-					input(type="text",name="titulo",placeholder="Título de película", required)
+					input(type="text",name="titulo",id="titulo",placeholder="Título de película", required)
 				div
-					input(type="numeric",name="anno",placeholder="Año de la película",required)
+					input(type="numeric",name="anno",id="anno",placeholder="Año de la película",required)
 				div
 					input(type="submit",value="Grabar")
